tests/ui/plywrite_type_mismatch_scalar.stderr
error: ply(type="float") is incompatible with field type u32
 --> tests/ui/plywrite_type_mismatch_scalar.rs:5:5
  |
5 | /     #[ply(type = "float")]
6 | |     foo: u32,
  | |____________^
